// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectors selectApp should return the app 1`] = `
Object {
  "query": "react",
}
`;

exports[`selectors selectGitHub should return the github 1`] = `
Object {
  "topics": Object {},
}
`;

exports[`selectors selectUser should return the user 1`] = `
Object {
  "isAuthenticated": false,
  "status": "idle",
}
`;
